VTN-8301- fixed issue where the menu was overlapping the intput

--- a/packages/veritone-react-common/src/components/FaceEngineOutput/FaceDetectionBox/styles.scss
+++ b/packages/veritone-react-common/src/components/FaceEngineOutput/FaceDetectionBox/styles.scss
@@ -72,7 +72,7 @@
 .autoCompleteDropdown {
   display: flex;
   flex-direction: column;
-  max-height: 400px;
+  max-height: 350px;
 }
 
 .entitySearchInput {
